app/src/components/CustomScrollArea/CustomScrollArea.css
.custom-scroll-area {
  position: relative;
  overflow-y: scroll;
  min-height: 100%;
  perspective: 1px;
  perspective-origin: top right;
  transform-style: preserve-3d;
  scrollbar-width: none;
}

.perspective-container {
  perspective-origin: top right;
  transform-style: preserve-3d;
  width: 100%;
  height: 100%;
  position: relative;
}

.custom-scrollbar-thumb {
  width: 8px;
  position: absolute;
  transform-origin: top right;
  pointer-events: auto;
  z-index: 100;
  background: rgba(var(--color-primary-rgb), 0.5);
  border-radius: 1rem;
  cursor: grab;
  transition:
    opacity 0.3s ease,
    background 0.2s ease;
  will-change: transform, opacity;
}

.custom-scrollbar-thumb--hidden {
  opacity: 0.2;
  pointer-events: none;
}

.custom-scrollbar-thumb:hover,
.custom-scrollbar-thumb--dragging {
  background: var(--color-primary);
  opacity: 1;
}

.custom-scrollbar-thumb--dragging {
  cursor: grabbing;
}

.custom-scrollbar-thumb:hover {
  background: var(--color-primary);
  opacity: 1;
}

